<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.vacancy.FragmentVacancy"
    android:orientation="vertical">

    <include
        android:id="@+id/included_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/vacancy_name"
                style="@style/text_font_xl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:paddingTop="@dimen/margin8"
                tools:text="[Vacancy name]"

                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/vacancy_salary"/>

            <TextView
                android:id="@+id/vacancy_salary"
                style="@style/text_font_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:paddingBottom="@dimen/margin8"
                tools:text="[Salary]"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/vacancy_name"/>

            <include
                android:id="@+id/included_vacancy_card"
                layout="@layout/item_vacancy_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/vacancy_salary"/>

            <TextView
                android:id="@+id/header_exp"
                style="@style/text_font_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_exp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="24dp"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/included_vacancy_card"/>
            
            <TextView
                android:id="@+id/value_exp"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[Exp]"
                android:textColor="?attr/colorOnPrimary"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_exp"/>

            <TextView
                android:id="@+id/value_work_format"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[work format]"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin8"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/value_exp"/>

            <TextView
                android:id="@+id/header_description"
                style="@style/text_font_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_description"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin32"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/value_work_format"/>

            <TextView
                android:id="@+id/header_responsibilities"
                style="@style/text_font_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_responsibilities"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin16"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_description"/>

            <TextView
                android:id="@+id/value_responsibilities"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[responsibilities]"
                android:textColor="?attr/colorOnPrimary"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_responsibilities"/>

            <TextView
                android:id="@+id/header_requirements"
                style="@style/text_font_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_requirements"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin16"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/value_responsibilities"/>

            <TextView
                android:id="@+id/value_requirements"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[requirements]"
                android:textColor="?attr/colorOnPrimary"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_requirements"/>

            <TextView
                android:id="@+id/header_conditions"
                style="@style/text_font_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_conditions"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin16"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/value_requirements"/>

            <TextView
                android:id="@+id/value_conditions"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[conditions]"
                android:textColor="?attr/colorOnPrimary"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_conditions"/>

            <TextView
                android:id="@+id/header_skills"
                style="@style/text_font_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_header_skills"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="24dp"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/value_conditions"/>

            <TextView
                android:id="@+id/value_skills"
                style="@style/text_font_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="[skills]"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="@dimen/margin16"

                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/header_skills"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
